Implemented form configuration for nested attributes

--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -4,3 +4,11 @@
 
 <em><%= @portfolio_item.subtitle %></em>
 <p><%= @portfolio_item.body %></p>
+
+<H2>Technologies used:</H2>
+
+<% @portfolio_item.technologies.each do |t| %>
+  <p>
+  	<%= t.name %>
+  </p>
+<% end %>
