--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,16 +15,19 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
 
-    <%= render "shared/nav", location: 'top' %>
+       <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+      
+        
+            <%= render "shared/application_nav" %>
 
-    <%= login_helper %>
+            <%= login_helper %>
 
-    <%= yield %>
+            <%= yield %>
 
-    <%= source_helper("application") %>
+            <%= source_helper("application") %>
+
+       </div>
 
   </body>
 </html>
