changed to old version of bootstrap and implemented some layout changes on the homepage

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,31 +3,33 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
 
-    <meta name="keywords" content="<%= @seo_Keywords %>" />
+    <meta name="keywords" content="<%= @seo_keywords %>" />
 
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <div class="site-wrapper">
+      <div class="site-wrapper-inner">
+        <div class="cover-container">
 
-       <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
-      
+          <%= render "shared/application_nav" %>
+
         
-            <%= render "shared/application_nav" %>
 
-            <%= login_helper %>
+          <%= yield %>
 
-            <%= yield %>
+          <%= render "shared/application_footer" %>
 
-            <%= source_helper("application") %>
+          <%= source_helper("application") %>
 
-       </div>
-
+        </div>
+      </div>
+    </div>
   </body>
 </html>
