Build about and contact page and integrated google maps in it

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,8 @@
 <div class="inner cover">
-  <h1 class="cover-heading">Cover your page.</h1>
-  <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+  <h1 class="cover-heading">Welcome</h1>
+  <p class="lead">I think the world can be an even greater place to be than it already is</p>
+  <p class="lead">To help people to contribute to that I'm developing a platform</p>
+  <p class="lead">This website is the result of me learning to develop web applications using Ruby on Rails</p>
   <p class="lead">
     <%= link_to "About Me", about_me_path, class: "btn btn-lg btn-secondary" %>
   </p>
