--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,11 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<div class="inner cover">
+  <h1 class="cover-heading">About me</h1>
+  <p class="lead">
+  	 For a long time, I've been working in IT projects, fulfilling all kind of roles.
+  	 Outside working hours I've worked on non profit voluntary projects regularly, to contribute to a more beautiful world.
+  	 However, this has not always been very effective. And as a result of that was sometimes even quite frustrating!
+  	 Due to the Corono crisis I have decided to dedicate a part of my workweek to a non profit project.
+  	 In this project I'm going to create a platform that joins people and projects that contribute to a more beautiful world. 
+  	 The platform will help creating a network, a community of people working on all kinds op initiatives and projects, helping each other.
+  </p>
+</div>
