--- a/app/views/shared/_portfolio_footer.html.erb
+++ b/app/views/shared/_portfolio_footer.html.erb
@@ -1,10 +1,13 @@
 <footer class="text-muted">
   <div class="container">
-    <p class="float-right">
-      <p><%= @copyright %></p>
+
+    <p class="float-right">    
+        <a href="#">Back to top</a> / 
+	    <%= link_to "View all Portfolio Items", portfolios_path %>
+    </p>
     <p>
-      <a href="#">Back to top</a>
-  </p>
-</footer>
+       <%= @copyright %>       	
+    </p>         
+
   </div>
 </footer>
