--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,34 +1,46 @@
 <%= form_with(model: @portfolio_item, local: true) do |form| %>
+
+<div class="row">
+   <div class="col-md-6">
+      <div class="form-group">
+        <%= form.label :title %>
+        <%= form.text_field :title, class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
+        <%= form.label :subtitle %>
+        <%= form.text_field :subtitle, class: 'form-control' %>
+      </div>
+   </div>
+
+   <div class="col-md-6">
+      <div class="form-group">
+      <%= form.label :body %>
+      <%= form.text_area :body, class: 'form-control', rows: 10 %>
+      </div>
+   </div>
+
+</div>
  
+<hr>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
+<div class="col-md-6">
+    <H2>Technologies used</H2>
 
-  <div class="field">
-    <%= form.label :subtitle %>
-    <%= form.text_field :subtitle %>
-  </div>
+    <ul>
+      <%= form.fields_for :technologies do |technology_form| %>
+      <div class="form-group">  
+        <%= technology_form.label :name %>
+        <%= technology_form.text_field :name, class: 'form-control' %>
+      </div>
 
-  <div class="field">
-    <%= form.label :body %>
-    <%= form.text_area :body %>
-  </div>
-
-  <ul>
-    <%= form.fields_for :technologies do |technology_form| %>
-    <li>  
-      <%= technology_form.label :name %>
-      <%= technology_form.text_field :name %>
-    </li>
-
-    <% end %>
-  </ul>
+      <% end %>
+    </ul>
 
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+    <div class="form-group">
+      <%= form.submit "Save portfolio item", class: "btn btn-primary" %>
+    </div>
+  <% end %>
+</div>
 
