Added copyright en nav structure to application helper to improve maintainability

--- a/app/views/shared/_portfolio_footer.html.erb
+++ b/app/views/shared/_portfolio_footer.html.erb
@@ -6,6 +6,7 @@
 	    <%= link_to "View all Portfolio Items", portfolios_path %>
     </p>
     <p>
+       <% set_copyright %>
        <%= @copyright %>       	
     </p>         
 
