--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -10,9 +10,15 @@
     <meta name="keywords" content="<%= @seo_Keywords %>" />
 
     <%= csp_meta_tag %>
-
+  
     <%= stylesheet_link_tag 'portfolios', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'portfolio', 'data-turbolinks-track': 'reload' %>
+
+
+   <!--  <%= stylesheet_link_tag '//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/le-frog/jquery-ui.min.css' %> -->
+   <!--  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>  -->
+
   </head>
 
   <body>
