--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -23,6 +23,12 @@
 		  </p>
 		<% end %>
 
+		<% if logged_in?(:site_admin) %>
+			<div>
+				<%= link_to "Edit item", edit_portfolio_path(@portfolio_item), class: 'btn btn-warning' %>
+			</div>
+		<% end %>
+
    	  </div>
 
    </div>
