--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -42,15 +42,16 @@
 <div class="col-md-6">
     <H2>Technologies used</H2>
 
-    <ul>
+    <div>
       <%= form.fields_for :technologies do |technology_form| %>
-      <div class="form-group">  
-        <%= technology_form.label :name %>
-        <%= technology_form.text_field :name, class: 'form-control' %>
+         <%= render 'technology_fields', f: technology_form  %>
+      <% end %>
+
+      <div>
+        <%= link_to_add_association 'Add technology', form, :technologies %>
       </div>
 
-      <% end %>
-    </ul>
+    </div>
 
 
     <div class="form-group">
