--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
   </head>
 
   <body>
@@ -34,9 +35,11 @@
 
           <%= render "shared/application_footer" %>
 
+          <%= render "shared/alerts" %>
+
           <%= source_helper("application") %>
 
-        </div>
+          </div>
       </div>
     </div>
   </body>
