--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,5 +1,13 @@
 <%= form_with(model: @portfolio_item, local: true) do |form| %>
 
+ <% if @portfolio_item.errors.any? %>
+    <% @portfolio_item.errors.full_messages.each do |error| %>
+      <div id="notification" data-type="error" data-message="<%= @portfolio_item.errors.full_messages %>"></div>
+      <%= javascript_pack_tag 'alerts' %>
+    <% end %>
+ <% end %>
+
+
 <div class="row">
    <div class="col-md-6">
       <div class="form-group">
