added notifications using sweetify for blog form and portfolio form

--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -26,6 +26,8 @@
 
     <%= render 'shared/portfolio_footer' %>     
 
+    <%= render "shared/alerts" %>
+
     <%= source_helper("potfolio") %>
 
   </body>
