--- a/app/views/pages/tech_news.html.erb
+++ b/app/views/pages/tech_news.html.erb
@@ -1,13 +1,13 @@
 <div class="inner cover">
 
-   <h1 class="cover-heading">Tech News</h1>
+   <h1 class="cover-heading">мода</h1>
 
    <div class="row"   >
    	  <% @tweets.each do |tweet| %>
    	    <div class="col-md-6">
    	  	  <div class="tech-news">
    	  	  	<div class="card">
-   	  	 	    <%= tweet  %>
+   	  	 	    <%= twitter_parser tweet  %>
    	  	 	</div>
    	  	  </div>
    	    </div>
