Improved layout of tweets on tech-news page and added tech-news page to the nav bar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -158,7 +158,8 @@ body {
   .masthead,
   .mastfoot,
   .cover-container {
-    width: 55rem;
+    width: 65rem;
+    
   }
 }
 
@@ -209,35 +210,19 @@ body {
   
 }
 
+.tech-news {
+  color: black;
+  margin: 20px;
 
+}
 
+.tech-news a {
+  color: green;
+    
+}
 
+.tech-news > .card {
+  padding: 20px;
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+}
 
