--- a/app/views/pages/tech_news.html.erb
+++ b/app/views/pages/tech_news.html.erb
@@ -1,6 +1,6 @@
 <div class="inner cover">
 
-   <h1 class="cover-heading">мода</h1>
+   <h1 class="cover-heading">Tech News</h1>
 
    <div class="row"   >
    	  <% @tweets.each do |tweet| %>
