--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -9,7 +9,9 @@
 
   <%= render "comments/comments_form" %>
 
-  <%= render @blog.comments %>
+  <div id='comments' data-blog-id = "<%= @blog.id %>" >
+  	<%= render @blog.comments %>
+  </div>
 
 </div>
 
