--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -4,6 +4,8 @@
     <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
   </div>
 
+  <%= source_helper("alert alert-primary blog-sidebar-source") %> 
+
   <div class="sidebar-module">
     <h4>Topics</h4>
     <% @sidebar_topics.each do |topic| %>
@@ -11,8 +13,6 @@
 
     <% end %>
  </div> 
-
-
  
   <div class="sidebar-module">
     <h4>Elsewhere</h4>
