--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,25 +1,35 @@
-<h1 class="cover-heading">Would you like to cooperate?</h1>
-
-<div class="row">
-  <div clas="col-md-6">
+<div class="app-card-container">
+  <div class="card">
 
 
-	  <h3>Adress</h3>
-	  <p> Bonenakker 8<br>
-	  	  7392 BA Twello<br>
-	  	  The Netherlands<br>
+	<h1 class="cover-heading">Would you like to cooperate?</h1>
 
-	  <h3>Telephone</h3>
-	  <p> +31 643013820 </p>
+	<hr>
 
-	  <h3>Email</h3>
-	  <p><a href="mailto:Pepijn.vandevorst@gmail.com?subject=Cooperation">email me</a> </p>
+	<div class="row">
+	  	<div class="col-md-6">
+
+		  <h3>Adress</h3>
+		  <p> 
+		  	  Bonenakker 8<br>
+		  	  7392 BA Twello<br>
+		  	  The Netherlands<br>
+		  </p>
+
+		  <h3>Telephone</h3>
+		  <p> +31 643013820 </p>
+
+		  <h3>Email</h3>
+		  <p><a href="mailto:Pepijn.vandevorst@gmail.com?subject=Cooperation">email me</a> </p>
+
+		</div>
+
+		<div class="col-md-6">
+		  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2443.739316806159!2d6.118121415803312!3d52.229953765436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c7c02402c4dae3%3A0x463657a23fae1933!2sBonenakker%208%2C%20Twello!5e0!3m2!1sen!2snl!4v1589273314698!5m2!1sen!2snl" width="450" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+		</div>
 
 	</div>
 
-	<div clas="col-md-6">
-	  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2443.739316806159!2d6.118121415803312!3d52.229953765436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c7c02402c4dae3%3A0x463657a23fae1933!2sBonenakker%208%2C%20Twello!5e0!3m2!1sen!2snl!4v1589273314698!5m2!1sen!2snl" width="500" height="350" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-	</div>
-
+  </div>
 </div>
 
