--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -20,6 +20,55 @@
            In this project I'm going to create a platform that joins people and projects that contribute to a more beautiful world. 
            The platform will help creating a network, a community of people working on all kinds op initiatives and projects, helping each other.
         </p>
+
+        <p>
+          <button
+            class="btn btn-primary"  
+            type="button"
+            data-toggle="collapse"
+            data-target="#jobHistory"
+            area-expanded="false"
+            area-controller="jobHistory"
+
+          >
+            Job History
+          </button>
+           <button
+            class="btn btn-primary"  
+            type="button"
+            data-toggle="collapse"
+            data-target="#education"
+            area-expanded="false"
+            area-controller="education"
+
+          >
+            Education
+          </button>
+        </p>
+
+        <p>
+          <div class="collapse" id="jobHistory">
+            <div class="card card-block">
+              Application Engineer
+            </div>
+              <div class="card card-block">
+              Test Manager
+            </div>
+          </div>
+
+            <div class="collapse" id="education">
+            <div class="card card-block">
+              HIO
+            </div>
+              <div class="card card-block">
+              Koninklijke Luchtmacht
+            </div>
+            <div class="card card-block">
+              Landbouw Universiteit Wageningen
+            </div>
+          </div>
+        </p>
+
       </div>
     </div>
   </div>
